<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">"Hello World!"</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="GUI_message">Look at my GUI</string>
    <string name="Click">Click here</string>
    <string name="Check_out">Check this out!</string>
    <string name="Switch">Switch on / off</string>
    <string name="Type">Type here</string>


</resources>
