<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="@string/GUI_message"
        android:id="@+id/text2"
        />
    <Button
        android:id="@+id/button1"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:gravity="fill"
        android:text="@string/Click"
        android:textAlignment="center"
        android:layout_below="@id/text2"
        />
    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="fill"
        android:text="@string/Check_out"
        android:layout_toEndOf="@id/button1"
        android:layout_below="@id/text2"
        />
    <ImageButton
        android:id="@+id/flagPic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="fill"
        android:src="@drawable/flag"
        android:layout_below="@id/button1"
        />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="fill"
        android:text="@string/Switch"
        android:layout_toEndOf="@id/flagPic"
        android:layout_alignTop="@id/flagPic"
        android:layout_alignParentRight="true"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/Type"
        android:layout_below="@id/flagPic"
        />
</RelativeLayout>